<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="100"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jacob.cryptowatcher.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout

        android:id="@+id/headings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:background="@android:color/darker_gray"

        android:gravity="bottom">

        <TextView
            android:id="@+id/NameHeader"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/coin"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/LogoHeader"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/logo"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/PriceHeader"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/price"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/UpdateHeader"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/last_updated"
            android:textAlignment="center" />

    </LinearLayout>

    <ListView
        android:id="@+id/mainList"
        android:layout_width="match_parent"
        android:layout_height="572dp"
        android:layout_weight="10" />



</LinearLayout>
